# quickcheck-with-counterexamples

./: LICENSE  README  quickcheck-with-counterexamples.cabal
Test/QuickCheck/: Counterexamples.hs
examples/: Heap.hs  Heap_Program.hs  Heap_ProgramAlgebraic.hs  Lambda.hs  Merge.hs  Set.hs  Simple.hs
