name:                quickcheck-with-counterexamples
version:             1.0
synopsis:            Get counterexamples out of QuickCheck as Haskell values
description:
    When QuickCheck finds a counterexample, it prints it out but
    doesn't return it to the Haskell program. This can be annoying
    when debugging.
    .
    This library provides a small extension to QuickCheck that returns
    counterexamples as typed Haskell values. To use it, simply import
    the module @Test.QuickCheck.Counterexamples@ instead of
    @Test.QuickCheck@; most things will work the same but the main
    @quickCheck@ function will now return a counterexample instead of
    @()@.
homepage:            http://www.github.com/nick8325/quickcheck-with-counterexamples
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nick@smallbone.se
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Test.QuickCheck.Counterexamples
  build-depends:
    base >= 4 && < 5,
    QuickCheck
  default-language:    Haskell2010
