name:     quickcheck-with-counterexamples
version:  1.0
synopsis: Get counterexamples from QuickCheck as Haskell values

description:
    When QuickCheck finds a counterexample, it prints it out but
    doesn't return it to the Haskell program. This can be annoying
    when debugging.
    .
    This library provides a small extension to QuickCheck that returns
    counterexamples as normal Haskell values. To use it, just import
    "Test.QuickCheck.Counterexamples" /instead of/ @Test.QuickCheck@.
    You will notice that the return types of
    'Test.QuickCheck.Counterexamples.quickCheck' and related functions
    have changed to include a counterexample, but otherwise the module
    is compatible with normal QuickCheck.

homepage:      http://www.github.com/nick8325/quickcheck-with-counterexamples
license:       BSD3
license-file:  LICENSE
author:        Nick Smallbone
maintainer:    nick@smallbone.se
category:      Testing
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    README
    examples/Heap.hs
    examples/Heap_Program.hs
    examples/Heap_ProgramAlgebraic.hs
    examples/Lambda.hs
    examples/Merge.hs
    examples/Set.hs
    examples/Simple.hs

source-repository head
  type:     git
  location: https://github.com/nick8325/quickcheck-with-counterexamples

source-repository this
  type:     git
  location: https://github.com/nick8325/quickcheck-with-counterexamples
  tag:      1.0

library
  exposed-modules:     
    Test.QuickCheck.Counterexamples
  build-depends:
    base >= 4 && < 5,
    QuickCheck,
    template-haskell
  default-language: Haskell2010
